--- a/docroot/themes/custom/ymca/css/style.css
+++ b/docroot/themes/custom/ymca/css/style.css
@@ -1978,7 +1978,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   display: inline-block;
   vertical-align: top;
   margin: 0;
-  font-size: 13px;
+  font-size: 12px;
   line-height: 20px;
   color: #a8a8a8;
 }
@@ -1990,6 +1990,8 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 .page-footer.footer-themes-b nav nav {
   width: 100%;
   padding: 0;
+  margin-left: 0;
+  margin-right: 0;
 }
 .page-footer.footer-themes-b nav .nav {
   text-align: center;
@@ -2004,7 +2006,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 .page-footer.footer-themes-b .list-inline {
   text-align: center;
-  margin: 0 0 40px 0;
+  margin: 4px 0 36px -5px;
 }
 .page-footer.footer-themes-b .list-inline > li {
   display: inline-block;
@@ -2069,6 +2071,7 @@ a.ms-brand:hover {
 }
 
 .social-icon {
+  color: #377bb5;
   position: relative;
   display: block;
   overflow: hidden;
