--- a/themes/openy_themes/openy_carnation/templates/page/page.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/page/page.html.twig
@@ -174,11 +174,11 @@
       </div>
       <div class="footer__copyright">
         <div class="row">
-          <div class="col-xs-12 col-lg-8 footer-copy-links">
-           {{ page.footer_copyright }}
-          </div>
-          <div class="col-xs-12 col-lg-4 footer-menu-links">
+          <div class="col-xs-12 col-lg-4 footer-menu-links order-1 order-lg-2">
            {{ page.footer_menus }}
+          </div>
+          <div class="col-xs-12 col-lg-8 footer-copy-links order-2 order-lg-1">
+           {{ page.footer_copyright }}
           </div>
          </div>
        </div>
