--- a/themes/openy_themes/openy_carnation/src/scss/modules/_header.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/modules/_header.scss
@@ -25,6 +25,7 @@
   }
 }
 
+// top menu (blue > mobile / black > desktop+ )
 .page-head__top-menu {
   background-color: rgba($primary, .8);
 
@@ -34,7 +35,7 @@
 
   .navbar-nav > li {
     @include media-breakpoint-up(lg) {
-      border-right: 1px solid #636466;
+      border-right: 1px solid $gray-400;
     }
 
     &:last-child {
@@ -45,12 +46,68 @@
       font-family: $headings-font-family;
       color: $gray-800;
       background-color: transparent !important;
-      padding-bottom: 11px;
-      padding-top: 11px;
+      padding-bottom: 8px;
+      padding-top: 8px;
       font-size: 18px;
       letter-spacing: -0.9px;
       text-shadow: none;
       text-transform: none;
+    }
+  }
+}
+
+// google translate widget
+.goog-te-menu-frame.open {
+  left: 0;
+  top: 150px;
+}
+
+.openy-gtranslate {
+  float: right;
+  display: none;
+  vertical-align: text-bottom;
+
+  @include media-breakpoint-up(lg) {
+    display: flex;
+  }
+
+  .goog-te-gadget-simple {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+
+    .goog-te-gadget-icon {
+      display: none;
+    }
+
+    .goog-te-menu-value {
+      display: inline-block;
+      margin: 0;
+      padding: 8px 1.5rem;
+      font-family: $headings-font-family;
+      font-size: 16px;
+      color: $gray-800;
+      border-left: 1px solid $gray-400;
+      transition: all 0.2s linear;
+    }
+
+    .goog-te-menu-value {
+      img,
+      span:not(:first-of-type) {
+        display: none;
+      }
+
+      &:after {
+        content: '\f107';
+        font-family: 'FontAwesome';
+        font-size: 18px;
+        padding-left: 5px;
+      }
+
+      &:hover {
+        background-color: white;
+        color: black;
+      }
     }
   }
 }
