--- a/themes/openy_themes/openy_carnation/templates/paragraph/paragraph--grid-columns.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/paragraph/paragraph--grid-columns.html.twig
@@ -60,7 +60,7 @@ set classes = [
       {% else %}
         <h2>{{ content.field_prgf_clm_headline }}</h2>
       {% endif %}
-      <div class="text pb-lg-5" data-mh="grid-col-group-text">{{ content.field_prgf_grid_clm_description }}</div>
+      <div class="text pb-5" data-mh="grid-col-group-text">{{ content.field_prgf_grid_clm_description }}</div>
       <div class="image-prgf-grid">{{ content.field_image }}</div>
       <div class="more-link">{{ content.field_prgf_clm_link }} {{ content.field_link_attribute }}</div>
     </div>
