Work on new user login page.

--- a/themes/openy_themes/openy_carnation/src/scss/_base.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/_base.scss
@@ -2,6 +2,7 @@
 
 @import "component/ajax";
 @import "component/alert";
+@import "component/buttons";
 @import "component/field";
 @import "component/file";
 @import "component/filter";
