--- a/themes/openy_themes/openy_carnation/src/scss/modules/_footer.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/modules/_footer.scss
@@ -88,7 +88,7 @@
   #block-footeremail p {
     a:hover {
       text-decoration: underline !important;
-      color: $blue;
+      color: $primary;
     }
 
     a::before {
@@ -118,7 +118,7 @@
     }
 
     .list-inline li:hover .fa::before {
-      color: $blue;
+      color: $primary;
     }
   }
 
