--- a/themes/openy_themes/openy_carnation/src/scss/modules/_grid_col.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/modules/_grid_col.scss
@@ -81,7 +81,7 @@
       a {
         font-family: $headings-font-family;
         text-transform: uppercase;
-        font-weight: bold;
+        font-weight: 500;
         font-size: 20px;
         line-height: 44px;
         letter-spacing: -1px;
