--- a/themes/openy_themes/openy_carnation/src/scss/modules/_page.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/modules/_page.scss
@@ -24,7 +24,7 @@ body {
   }
 
   .page-head__main-menu .nav-level-2 > a {
-    color: $blue !important;
+    color: $primary !important;
 
     &:hover {
       color: $pink !important;
