--- a/themes/openy_themes/openy_carnation/src/scss/presentation/_variables.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/presentation/_variables.scss
@@ -37,8 +37,12 @@ $colors: map-merge((
     "dark-blue":      $light-blue,
 ), $colors);
 
+// theme colours
+$primary-darker:    $dark-blue;
+
 $theme-colors: () !default;
 $theme-colors: map-merge((
+    "primary-darker":    $primary-darker,
     "black":       $black
 ), $theme-colors);
 
