--- a/themes/openy_themes/openy_carnation/templates/page/page.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/page/page.html.twig
@@ -98,7 +98,7 @@
           <div class="container-fluid m-0 p-0">
 
             {# sitename & secondary menu #}
-            <div class="page-head__top-menu d-flex align-items-center w-100">
+            <div class="page-head__top-menu d-flex align-items-stretch w-100">
               <div class="col-md-6 site-name">
                {{ page.logo }}
               </div>
