--- a/themes/openy_themes/openy_carnation/src/scss/base/_typography.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/base/_typography.scss
@@ -29,14 +29,14 @@ h4 {
 
 h5 {
   font-size: 20px;
-  font-weight: bold;
+  font-weight: 500;
   letter-spacing: -0.5px;
 }
 
 h6,
 .h6 {
   font-size: 20px;
-  font-weight: bold;
+  font-weight: 500;
 }
 
 p {
