--- a/themes/openy_themes/openy_carnation/src/scss/modules/_banner.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/modules/_banner.scss
@@ -20,7 +20,7 @@
   .banner-title {
     font-size: 60px;
     line-height: normal;
-    font-weight: bold;
+    font-weight: 500;
     letter-spacing: -1.5px;
     color: white;
     text-transform: uppercase;
