--- a/themes/openy_themes/openy_carnation/src/scss/modules/_events.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/modules/_events.scss
@@ -65,7 +65,7 @@
 
     a {
       font-size: 20px;
-      font-weight: bold;
+      font-weight: 500;
       letter-spacing: -0.5px;
       color: $gray-700;
       text-transform: uppercase;
@@ -80,7 +80,7 @@
     font-size: 18px;
     font-weight: 500;
     letter-spacing: -0.4px;
-    color: $blue;
+    color: $primary;
 
     &:hover {
       text-decoration: underline !important;
@@ -122,7 +122,7 @@
 
 .row.event-info.header-info {
   .location-title a {
-    color: $blue;
+    color: $primary;
     font-size: 24px;
     font-weight: 500;
     line-height: 1.3;
@@ -173,7 +173,7 @@
   }
 
   .branch-phone {
-    font-weight: bold;
+    font-weight: 500;
 
     span {
       font-weight: normal;
@@ -185,7 +185,7 @@
     }
 
     .field-location-email-id {
-      color: $blue;
+      color: $primary;
 
       &::before {
         font-family: "icomoon" !important;
@@ -195,7 +195,7 @@
         display: inline-block;
         margin-top: -4px;
         margin-right: 4px;
-        color: $blue;
+        color: $primary;
       }
     }
   }
