--- a/themes/openy_themes/openy_carnation/templates/paragraph/paragraph--banner.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/paragraph/paragraph--banner.html.twig
@@ -61,10 +61,10 @@
             <h1 class="banner-title text-uppercase">
               {{ content.field_prgf_headline }}
             </h1>
-            <div class="banner-description text-light">
+            <div class="banner-description text-white">
               {{ content.field_prgf_description}}
             </div>
-            <div class="btn btn-transparent">
+            <div class="btn btn-lg btn-transparent">
               {{ content.field_prgf_link }}
             </div>
           </div>
