--- a/themes/openy_themes/openy_carnation/templates/user/page--user--login.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/user/page--user--login.html.twig
@@ -53,7 +53,7 @@
  * @ingroup templates
  *
  * @see template_preprocess_page()
- * @see html.html.twig
+ * @see html.htmsl.twig
  */
 #}
 {# Main #}
