--- a/themes/openy_themes/openy_carnation/src/scss/presentation/_variables.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/presentation/_variables.scss
@@ -38,23 +38,27 @@ $colors: map-merge((
 ), $colors);
 
 // theme colours
+$primary:           $blue !default;
 $primary-darker:    $dark-blue;
 
 $theme-colors: () !default;
 $theme-colors: map-merge((
-    "primary-darker":    $primary-darker,
-    "black":       $black
+    "primary-darker":     $primary-darker,
+    "black":              $black,
 ), $theme-colors);
-
 
 // Body
 //
 // Settings for the `<body>` element.
-$body-color:      $gray-700;
+$body-bg:                   $white !default;
+$body-color:                $gray-700;
 
 // Links
 //
 // Style anchor elements.
+$link-color:                $primary-darker;
+$link-hover-decoration:     none;
+$link-hover-color:          $primary;
 $link-hover-decoration:     none;
 
 //
@@ -87,3 +91,10 @@ $navbar-dark-color:                 $white;
 $navbar-dark-hover-color:           rgba($white, .75);
 $navbar-dark-toggler-icon-bg:       str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='#{$navbar-dark-color}' stroke-width='4' stroke-linecap='square' stroke-miterlimit='8' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E"), "#", "%23") !default;
 
+
+// Navs
+$nav-tabs-border-color:             $gray-200;
+$nav-tabs-link-hover-border-color:  $gray-100 $gray-100 $nav-tabs-border-color;
+$nav-tabs-link-active-color:        $gray-400;
+$nav-tabs-link-active-bg:           $body-bg !default;
+$nav-tabs-link-active-border-color: $gray-200 $gray-200 $nav-tabs-link-active-bg;
