--- a/docroot/themes/custom/ymca/css/style.css
+++ b/docroot/themes/custom/ymca/css/style.css
@@ -5096,7 +5096,7 @@ a.wrapper:hover {
     padding-top: 80px;
   }
   .locations-camps-template .page-middle {
-    margin-top: -50px;
+    margin-top: 0;
     padding-top: 0;
   }
 
