Style site alerts.

--- a/themes/openy_themes/openy_carnation/src/scss/_base.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/_base.scss
@@ -29,6 +29,7 @@
 @import "modules/menu";
 @import "modules/mobile-menu";
 @import "modules/page";
+@import "modules/site-alert";
 @import "modules/user_login";
 @import "layouts/mob";
 @import "layouts/tab";
