--- a/themes/openy_themes/openy_carnation/templates/menu/menu-local-tasks.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/menu/menu-local-tasks.html.twig
@@ -15,9 +15,9 @@
 #}
 {% if primary %}
   <h2 class="visually-hidden">{{ 'Primary tabs'|t }}</h2>
-  <ul class="nav nav-tabs primary">{{ primary }}</ul>
+  <ul class="nav nav-tabs primary mt-5">{{ primary }}</ul>
 {% endif %}
 {% if secondary %}
   <h2 class="visually-hidden">{{ 'Secondary tabs'|t }}</h2>
-  <ul class="nav nav-tabs secondary">{{ secondary }}</ul>
+  <ul class="nav nav-tabs secondary mt-5">{{ secondary }}</ul>
 {% endif %}
