--- a/themes/openy_themes/openy_carnation/templates/node/node--alert--node-alert-header.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/node/node--alert--node-alert-header.html.twig
@@ -83,8 +83,8 @@
 {% endif %}
 
 <div {{ attributes.setAttribute('style', bg_color ~ '; ' ~ txt_color) }}>
-  <div class="container header-alert">
-    <div class="row site-alert__wrapper">
+  <div class="container header-alert py-3">
+    <div class="row site-alert__wrapper py-2 px-5">
       {% if icon_color is defined %}
         <div class="site-alert__icon" style="color: {{ icon_color }}">
           <i class="fa fa-exclamation-circle"></i>
@@ -99,7 +99,7 @@
       {% if link_title %}
         <div class="col-xs-12 col-sm-5 col-md-4 col-lg-3 site-alert__cta">
           <div class="field-alert-link">
-            <a href="{{ link_url }}" style="color: {{ text_color }}; border-color: {{ text_color}}">{{ link_title }}</a>
+            <a href="{{ link_url }}" class="btn btn-md btn-black btn-block py-2">{{ link_title }}</a>
           </div>
         </div>
       {% endif %}
