--- a/themes/openy_themes/openy_carnation/templates/page/page.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/page/page.html.twig
@@ -158,16 +158,16 @@
     <footer class="footer">
       <div class="container">
        <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-12 col-md-6 col-lg">
           {{ page.footer_info }}
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-xs-12 col-md-6 col-lg">
             {{ page.footer_tel }}
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-xs-12 col-md-6 col-lg">
             {{ page.footer_mail }}
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-xs-12 col-md-6 col-lg">
           {{ page.footer_social }}
         </div>
        </div>
