Finished memberships homepage block.

--- a/themes/openy_themes/openy_carnation/src/scss/_base.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/_base.scss
@@ -8,6 +8,7 @@
 @import "component/filter";
 @import "component/form";
 @import "component/icon";
+@import "component/lists";
 @import "component/navbar";
 @import "component/node";
 @import "component/panel";
