--- a/themes/openy_themes/openy_carnation/src/scss/layouts/_mob.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/layouts/_mob.scss
@@ -160,10 +160,10 @@
     margin-top: 15px;
   }
 
-  .footer__copyright,
-  .region-footer-menus ul {
-    text-align: center !important;
-  }
+  //.footer__copyright,
+  //.region-footer-menus ul {
+  //  text-align: center !important;
+  //}
 
   .node,
   .two-columns-container,
