--- a/themes/openy_themes/openy_carnation/src/scss/layouts/_tab.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/layouts/_tab.scss
@@ -95,12 +95,12 @@
     min-height: 100px;
   }
 
-  .list-inline {
-    text-align: left;
-  }
+  //.list-inline {
+  //  text-align: left;
+  //}
 
-  .footer__copyright,
-  .region-footer-menus ul {
-    text-align: center !important;
-  }
+  //.footer__copyright,
+  //.region-footer-menus ul {
+  //  text-align: center !important;
+  //}
 }
