--- a/themes/openy_themes/openy_carnation/templates/node/node--alert--node-alert-header.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/node/node--alert--node-alert-header.html.twig
@@ -90,14 +90,14 @@
           <i class="fa fa-exclamation-circle"></i>
         </div>
       {% endif %}
-      <div class="col-xs-12 col-sm-6 col-md-7 col-lg-8">
+      <div class="col-12 col-sm-6 col-md-7 col-lg-8">
         <div class="site-alert__title">{{ label }}</div>
         <div class="site-alert__content header-alert__content">
           {{ content.field_alert_description }}
         </div>
       </div>
       {% if link_title %}
-        <div class="col-xs-12 col-sm-5 col-md-4 col-lg-3 site-alert__cta">
+        <div class="col-12 col-sm-5 col-md-4 col-lg-3 site-alert__cta">
           <div class="field-alert-link">
             <a href="{{ link_url }}" class="btn btn-md btn-black btn-block py-2">{{ link_title }}</a>
           </div>
