--- a/themes/openy_themes/openy_carnation/templates/page/page.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/page/page.html.twig
@@ -156,28 +156,29 @@
     </div>
 
     <footer class="footer">
-      <div class="container">
-       <div class="row">
-        <div class="col-12 col-md-6 col-lg">
-          {{ page.footer_info }}
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg">
-            {{ page.footer_tel }}
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg">
-            {{ page.footer_mail }}
-        </div>
-        <div class="col-xs-12 col-md-6 col-lg">
-          {{ page.footer_social }}
-        </div>
-       </div>
-      </div>
-      <div class="footer__copyright">
+      <div class="container py-5">
         <div class="row">
-          <div class="col-xs-12 col-lg-4 footer-menu-links order-1 order-lg-2">
+          <div class="col-12 col-md-6 col-lg">
+            {{ page.footer_info }}
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg">
+              {{ page.footer_tel }}
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg">
+              {{ page.footer_mail }}
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg">
+            {{ page.footer_social }}
+          </div>
+        </div>
+      </div>
+
+      <div class="footer__copyright container-fluid py-3">
+        <div class="row">
+          <div class="col-12 col-lg-4 order-1 order-lg-2 footer-menu-links">
            {{ page.footer_menus }}
           </div>
-          <div class="col-xs-12 col-lg-8 footer-copy-links order-2 order-lg-1">
+          <div class="col-12 col-lg-8 order-2 order-lg-1 footer-copy-links">
            {{ page.footer_copyright }}
           </div>
          </div>
