--- a/themes/openy_themes/openy_carnation/templates/paragraph/paragraph--latest-blog-posts-branch.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/paragraph/paragraph--latest-blog-posts-branch.html.twig
@@ -43,7 +43,12 @@ set classes = [
 view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
 ]
 %}
+{% if content.field_prgf_title.0 is empty %}
+  {% set title = 'What\'s New at '|t ~ label ~ '?' %}
+{% else %}
+  {% set title = content.field_prgf_title.0 %}
+{% endif %}
 <div{{ attributes.addClass(classes) }}>
-    <h2>{{ 'What\'s New at the Branch'|t }}</h2>
-    {{ content }}
+    <h2 class="h1">{{ title }}</h2>
+    {{ content|without('field_prgf_title') }}
 </div>
