--- a/themes/openy_themes/openy_carnation/src/scss/_overrides.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/_overrides.scss
@@ -20,10 +20,15 @@ ol, ul {
 
 // Footer.
 .footer {
-  margin-top: 45px;
-  padding-top: 35px;
-  padding-bottom: 36px;
-  border-top: 1px solid #e5e5e5;
+  //margin-top: 45px;
+  //padding-top: 35px;
+  //padding-bottom: 36px;
+  //border-top: 1px solid #e5e5e5;
+  background-color: $gray-900;
+  color: white;
+  font-size: 12px;
+  //padding: 50px 0 0;
+  //font-family: Verdana,Geneva,sans-serif;
 }
 
 // Paragraphs.
