--- a/themes/openy_themes/openy_carnation/templates/node/node--alert--node-alert-footer.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/node/node--alert--node-alert-footer.html.twig
@@ -83,23 +83,23 @@
 {% endif %}
 
 <div {{ attributes.setAttribute('style', bg_color ~ '; ' ~ txt_color) }}>
-  <div class="container footer-alert">
-    <div class="row site-alert__wrapper">
+  <div class="container footer-alert py-4">
+    <div class="row site-alert__wrapper py-2 px-5">
       {% if icon_color is defined %}
         <div class="site-alert__icon" style="color: {{ icon_color }}">
           <i class="fa fa-exclamation-circle"></i>
         </div>
       {% endif %}
-      <div class="col-xs-12 col-sm-6 col-md-7 col-lg-8">
+      <div class="col-12 col-sm-6 col-md-7 col-lg-8">
         <div class="site-alert__title">{{ label }}</div>
         <div class="site-alert__content footer-alert__content">
           {{ content.field_alert_description }}
         </div>
       </div>
       {% if link_title %}
-        <div class="col-xs-12 col-sm-5 col-md-4 col-lg-3 site-alert__cta">
+        <div class="col-12 col-sm-5 col-md-4 col-lg-3 site-alert__cta">
           <div class="field-alert-link">
-            <a href="{{ link_url }}" style="color: {{ text_color }}; border-color: {{ text_color}}">{{ link_title }}</a>
+            <a href="{{ link_url }}" class="btn btn-md btn-black btn-block py-2">{{ link_title }}</a>
           </div>
         </div>
       {% endif %}
