--- a/themes/openy_themes/openy_carnation/templates/page/page.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/page/page.html.twig
@@ -133,13 +133,12 @@
       </div>
     </header>
 
-    {{ page.header }}
-
-    {{ page.breadcrumb }}
-
-    {{ page.highlighted }}
-
-    {{ page.help }}
+    <div class="container">
+      {{ page.header }}
+      {{ page.breadcrumb }}
+      {{ page.highlighted }}
+      {{ page.help }}
+    </div>
 
     <main role="main">
       <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
