--- a/themes/openy_themes/openy_carnation/templates/menu/menu--main--primary-menu.html.twig
+++ b/themes/openy_themes/openy_carnation/templates/menu/menu--main--primary-menu.html.twig
@@ -31,7 +31,7 @@
 {% macro menu_links(items, attributes, menu_level) %}
   {% import _self as menus %}
   {% if items %}
-    <ul{{ attributes.addClass('navbar nav nav-fill align-items-center nav-level-1 pt-3 pb-0 m-0') }}>
+    <ul{{ attributes.addClass('navbar nav nav-fill align-items-center nav-level-1 p-0 m-0') }}>
     {% for item in items %}
       {% set ia = item.attributes %}
       {% set ia = ia.addClass('nav-item nav-level-2') %}
